fix validation, align box text contents

--- a/css/redesign.css
+++ b/css/redesign.css
@@ -236,10 +236,54 @@ body {
 
 .block-contents {
   /* color: white; */
-  padding: 16px;
+  padding: 24px;
   overflow: hidden;
   height: 100%;
   min-height: 300px;
+}
+
+.services-block-contents {
+  max-width: 1600px;
+  width: 100%;
+  background: #232323;
+  color: #fff;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-bottom: 20px;
+}
+
+.services-block-contents > div {
+  text-align: center;
+}
+
+.services-block-contents a {
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: all 300ms linear;
+  -moz-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
+  -ms-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+
+.services-block-contents a:hover {
+  color: yellow;
+}
+
+.services-block-contents ul.list-social-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.services-block-contents li {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .video-block {
@@ -260,12 +304,12 @@ body {
   font-weight: 700;
   font-size: 13px;
   text-transform: uppercase;
-  margin: 40px 40px 20px;
+  margin: 0 0 20px;
 }
 
 .block-big-heading {
   font-size: 52px;
-  margin: 0 40px 20px;
+  margin: 0 0 30px;
   line-height: 0.85em;
 }
 
@@ -334,6 +378,19 @@ body {
 }
 
 /*QUIZ STYLE END*/
+
+/*Services Box*/
+ul.social-list-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+ul.social-list-display li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 24px;
+}
 
 .testimonial-slider-container {
   position: absolute;
@@ -585,12 +642,11 @@ ul.slick-dots li button:before {
 
 /*MEDIA QUERIES*/
 @media (max-width: 37.5em) {
-
   .banner-slider {
     height: 50vh;
     max-height: 50vh;
   }
-  
+
   .nav-mobile {
     visibility: visible;
   }
@@ -624,6 +680,9 @@ ul.slick-dots li button:before {
     --aspect-ratio: 1/1;
   }
 
+  .block-contents {
+    padding: 16px;
+  }
   .block-small-heading {
     margin: 0 0 20px;
   }
@@ -635,5 +694,13 @@ ul.slick-dots li button:before {
 
   .footer {
     grid-template-columns: 1fr;
+  }
+
+  .services-block-contents {
+    grid-template-columns: 1fr;
+  }
+
+  .services-block-contents > div {
+    margin-bottom: 30px;
   }
 }
